--- a/package.json
+++ b/package.json
@@ -9,16 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.105.1",
-    "@react-three/fiber": "^8.16.1",
-    "@studio-freight/react-lenis": "^0.0.46",
-    "framer-motion": "^11.0.20",
-    "leva": "^0.9.35",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "resend": "^3.2.0",
-    "three": "^0.163.0"
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
