--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "lenis": "^1.1.4",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-spinners": "^0.13.8",
-    "resend": "^3.2.0"
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/node": "^20",
