--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-spinners": "^0.13.8",
+    "react-intersection-observer": "^9.13.1",
     "resend": "^4.0.0"
   },
   "devDependencies": {
