--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "lottie-react": "^2.4.0",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
