--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.20",
     "lottie-react": "^2.4.0",
     "next": "^14.2.3",
     "react": "^18",
