--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "@gsap/react": "^2.1.2",
     "gsap": "^3.12.5",
     "lenis": "^1.1.20",
-    "lottie-react": "^2.4.0",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.13.1",
-    "resend": "^4.0.0"
+    "react-intersection-observer": "^9.13.1"
   },
   "devDependencies": {
     "@types/node": "^20",
